--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
+    "compression": "^1.7.4",
     "express-rate-limit": "^7.1.5",
     "winston": "^3.11.0",
     "uuid": "^9.0.1"
